<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            tools:openDrawer="start">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewpager_main"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    </android.support.v4.view.ViewPager>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/radioGroup_main_bottom"
                        >

                        <RadioButton
                            android:id="@+id/radioButton_main_bottom_one"
                            style="@style/style_main_bottom_radio_button"
                            android:drawableTop="@mipmap/ic_nav_feedback"
                            android:text="@string/radiobutton_main_bottom_one"/>
                        <RadioButton
                            android:id="@+id/radioButton_main_bottom_two"

                            style="@style/style_main_bottom_radio_button"
                            android:drawableTop="@mipmap/ic_nav_feedback"

                            android:text="@string/radiobutton_main_bottom_two"/>

                        <RadioButton
                            android:id="@+id/radioButton_main_bottom_three"

                            style="@style/style_main_bottom_radio_button"
                            android:drawableTop="@mipmap/ic_nav_feedback"
                            android:text="@string/radiobutton_main_bottom_three"/>

                    </RadioGroup>

                </LinearLayout>




                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"/>

            </FrameLayout>

            <android.support.design.widget.NavigationView
                android:id="@+id/navigation_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/common_white"
                app:itemTextColor="#131313"
                app:menu="@menu/nav_menu"
                app:theme="@style/NavigationDrawerStyle"/>
        </android.support.v4.widget.DrawerLayout>
    </FrameLayout>
</layout>

